--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.2.0",
+    "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
@@ -22,8 +24,9 @@
   },
   "lint-staged": {
     "**/*.{js,ts,tsx}": [
-      "eslint --fix"
-    ]
+      "next lint"
+    ],
+    "**/*": "prettier --write --ignore-unknown"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.1",
