--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "lint-staged": {
     "**/*.{js,ts,tsx}": [
-      "next lint"
+      "eslint --cache --cache-location .next/cache/eslint/ --fix"
     ],
     "**/*": "prettier --write --ignore-unknown"
   },
